--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@stripe/react-stripe-js": "^3.0.0",
+    "@stripe/stripe-js": "^5.2.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/bcrypt": "^5.0.2",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "jose": "^5.9.6",
     "lucide-react": "^0.456.0",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "next": "^15.0.3",
-    "next-auth": "^4.24.10",
+    "next-auth": "5.0.0-beta.25",
     "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
